bad/field_access_non_class_type_bool.example_compiler_output
ERROR
[1mbad/field_access_non_class_type_bool.lat:3:7: [1;31merror: [0;1mtype `boolean` has no fields[m
	false.size;
	     [1;32m^[m
